--- a/.drone.yml
+++ b/.drone.yml
@@ -13,5 +13,4 @@ notify:
     webhook_url: $$slack_webhook
 script:
 - sudo pip install -q git+https://$REPORT_CARD_GITHUB_REPO_TOKEN@github.com/Clever/report-card.git; GITHUB_API_TOKEN=$REPORT_CARD_GITHUB_STATUS_TOKEN report-card --publish || true
-- go get
-- go test -v
+- make test
